tests/compliance/invalid/01-bad-indent.alp
!alp-version: 1.0.0

@project
  id: bad-indent-project
  name: "Bad Indent Project"
   version: 1.0.0
  state: planning
